@@ -410,6 +410,7 @@ $forward_method = 'smtp:[127.0.0.1]:PH_POSTFIX_MAIL_REINJECT_PORT';
     [ qr'^MBL_NA\.UNOFFICIAL'                              => 0.1 ],
     [ qr'^MBL_'                                            => undef ],
 ));
+
 @av_scanners = (
     ['clamav-socket',
     \&ask_daemon, ["CONTSCAN {}\n", 'PH_CLAMD_LOCAL_SOCKET'],
@@ -505,6 +506,7 @@ $bad_header_quarantine_to = 'bad-header-quarantine';
 # not be decoded or checked entirely, e.g. due to password-protected archives
 #$undecipherable_subject_tag = '***UNCHECKED*** ';  # undef disables it
 $undecipherable_subject_tag = undef;
+
 # Hope to fix 'nested MAIL command' issue on high load server.
 $smtp_connection_cache_enable = 0;
 
@@ -519,7 +521,10 @@ $signed_header_fields{'to'} = 1;
 #
 # DKIM
 #
+# Enable DKIM verification globally.
 $enable_dkim_verification = 1;
+
+# Disable DKIM signing globally, because it's controlled per policy bank.
 #$enable_dkim_signing = 1;
 
 # Add dkim_key here.
