@@ -84,6 +84,9 @@ auth_mechanisms = PLAIN LOGIN
 #       }
 #default_process_limit = 100
 
+# Mail delivery log format
+deliver_log_format = from=%{from}, envelope_sender=%{from_envelope}, subject=%{subject}, msgid=%m, size=%{size}, %$
+
 service auth {
     unix_listener PH_POSTFIX_CHROOT_DIR/private/dovecot-auth {
         user = PH_DOVECOT_AUTH_USER
